Fixed scroll progress not showing up, removed animation from mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -116,7 +116,7 @@ header {
     height: 10.2vh;
     background: linear-gradient(to right, $jinxlight, $indigo);
     width: 0%;
-    z-index: 3;
+    z-index: 997;
     transition: width 0.01s ease-out;
     animation: Animation 5s ease infinite;
   }
@@ -130,7 +130,7 @@ header {
     height: 0.4vh;
     background: linear-gradient(to right, $lightPurple, $indigo);
     width: 0%;
-    z-index: 3;
+    z-index: 997;
     transition: width 0.1s ease-out;
   }
 }
